<resources>
    <string name="time_about_a_minute_ago">about a minute ago</string>
    <string name="time_in_about_a_minute">in about a minute</string>
    <string name="time_about_an_hour_ago">about an hour ago</string>
    <string name="time_in_about_an_hour">in about an hour</string>
    <string name="time_date">%1$s at %2$s</string>
    <string name="time_happening_now">Happening Now</string>
    <string name="time_hours_ago">%d hours ago</string>
    <string name="time_in_x_hours">in %d hours</string>
    <string name="time_minutes_ago">%d minutes ago</string>
    <string name="time_in_x_minutes">in %d minutes</string>
    <string name="time_ongoing">Ongoing</string>
    <string name="time_this_month">This Month</string>
    <string name="time_this_week">This Week</string>
    <string name="time_today">Today</string>
    <string name="time_today_at">Today at %s</string>
    <string name="time_tomorrow">Tomorrow</string>
    <string name="time_tomorrow_at">Tomorrow at %s</string>
    <string name="time_week_day_at_time">%1$s at %2$s</string>
    <string name="time_yesterday_at">Yesterday at %s</string>
    <string name="time_tonight">Tonight</string>
    <string name="time_saturday">Saturday</string>
    <string name="time_sunday">Sunday</string>
    <string name="time_now">Now</string>
    <string name="pull_to_refresh_pull_label">Pull down to refresh…</string>
    <string name="pull_to_refresh_push_label">Push up to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Updating…</string>
    <string name="pull_to_refresh_last_updated_date">Last Updated: %1$s %2$s</string>
    <string name="message_queued">"Currently can't send your message. It will be sent when the service becomes available."</string>
    <string name="download_later">"Can't download right now. Try again later."</string>
    <string name="invalid_destination">Invalid destination address.</string>
    <string name="service_not_activated">Service not activated on network.</string>
    <string name="service_network_problem">"Couldn't send due to network problem."</string>
    <string name="service_message_not_found">Message expired or not available.</string>
    <string name="app_name">Messenger</string>
    <string name="app_name_short">Messenger</string>
    <string name="app_error_dialog_title">Messenger</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_enable">Turn On</string>
    <string name="dialog_not_now">Not Now</string>
    <string name="generic_loading">Loading…</string>
    <string name="upgrade_header">This version of Messenger is out of date.</string>
    <string name="upgrade_button">Get the Latest Version</string>
    <string name="upgrade_log_out_button">Log Out</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="start_screen_facebook_login">Continue</string>
    <string name="start_screen_somebody_else">Log In As Somebody Else</string>
    <string name="start_screen_sso_text">Continue as [[name]]</string>
    <string name="start_screen_sso_text_not_you_link">Not You?</string>
    <string name="login_screen_user_hint">Email</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="login_screen_login_button">Log In to Facebook</string>
    <string name="login_screen_signup_button">Sign up for Facebook</string>
    <string name="login_screen_login_progress">Logging in</string>
    <string name="login_screen_login_failed">Failed to log in</string>
    <string name="login_screen_facebook_connect_failure">Failed to connect through facebook</string>
    <string name="logging_in_progress">Logging in…</string>
    <string name="login_failed_message">Please enter the email and password you use to log in to Facebook.</string>
    <string name="login_approval_instructions">Login approvals are on. Expect an SMS shortly with a code to use for log in.</string>
    <string name="login_approval_code_hint">Code</string>
    <string name="login_approval_login_button">Continue</string>
    <string name="logging_out_progress">Logging out…</string>
    <string name="nux_next_button">Next</string>
    <string name="nux_group_chat_title">Start Group Chats</string>
    <string name="nux_group_chat_subtitle">Keep everyone in the loop</string>
    <string name="nux_cross_platform_title">Send to Phone, Chat and Web</string>
    <string name="nux_cross_platform_subtitle">Reach friends wherever they are now</string>
    <string name="nux_push_notifications_title">Reliable Push Notifications</string>
    <string name="nux_push_notifications_subtitle">Never miss a message again</string>
    <string name="nux_title">Get Started</string>
    <string name="nux_intro_title">Welcome to Messenger</string>
    <string name="nux_intro_blurb">Reach friends wherever they are now – mobile or web.</string>
    <string name="sms_nux_intro_title">Texting with Messenger</string>
    <string name="sms_nux_intro_blurb">Get texts and Facebook messages together in one place. [[learn_more_link]].</string>
    <string name="sms_nux_intro_upgrade_blurb">Now your texts and Facebook messages are together in one place. [[learn_more_link]].</string>
    <string name="sms_nux_learn_more_link">Learn more</string>
    <string name="sms_nux_try_button">Try It</string>
    <string name="sms_nux_skip_button">Not Now</string>
    <string name="sms_nux_thread_view">Get and send texts with Messenger. Just reply to return the text (standard texting rates apply).</string>
    <string name="sms_nux_more_button">More Info</string>
    <string name="sms_nux_okay_button">OK</string>
    <string name="sms_nux_detail_title">Texting With Messenger</string>
    <string name="sms_nux_detail_blurb_1">With Messenger, you can message friends on Facebook or text anyone in your phone contacts (standard data and texting rates apply). That way, all your conversations are together in one place.</string>
    <string name="sms_nux_detail_blurb_2">When you use Messenger as your main texting app, tapping a text message alert automatically opens Messenger.</string>
    <string name="sms_upsell">Messenger alerts are off for texting. [[learn_more_link]].</string>
    <string name="thread_list_title">Messages</string>
    <string name="thread_start_thread_button">Start a Conversation</string>
    <string name="thread_list_default_new_thread_list_item_text">New Conversation</string>
    <string name="thread_list_loading">Loading…</string>
    <string name="thread_new_conversation_title">New Message</string>
    <string name="thread_list_empty_message">You have no messages yet</string>
    <string name="thread_list_no_threads">No Conversations</string>
    <string name="thread_context_menu_title">Conversation</string>
    <string name="thread_context_menu_delete_conversation">Delete</string>
    <string name="thread_context_menu_archive_conversation">Archive</string>
    <string name="thread_context_menu_mark_conversation_as_spam">Mark as spam</string>
    <string name="message_context_menu_title">Message</string>
    <string name="message_context_menu_copy_message">Copy</string>
    <string name="message_context_menu_delete_message">Delete</string>
    <string name="thread_name_with_only_you">Just You</string>
    <string name="thread_name_untitled">Untitled Conversation</string>
    <string name="thread_name_me_prefix">Me:</string>
    <string name="thread_name_n_more">+%1$d</string>
    <string name="thread_loading">Loading…</string>
    <string name="thread_no_updates">No messages in this conversation.</string>
    <string name="add_person_dialog_name_hint">Name</string>
    <string name="add_person_dialog_email_hint">Email Address</string>
    <string name="add_person_dialog_phone_hint">Mobile Phone Number</string>
    <string name="add_person_dialog_add_button">Add</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_switch_accounts">Switch Accounts</string>
    <string name="preference_notifications_group_title">Notifications</string>
    <string name="preference_notifications_enabled_title">Notifications</string>
    <string name="preference_notifications_sound_enabled_title">Sound</string>
    <string name="preference_notifications_vibrate_enabled_title">Vibrate</string>
    <string name="preference_notifications_led_enabled_title">Light</string>
    <string name="preference_notifications_led_enabled_description">Blink when messages arrive</string>
    <string name="preference_notifications_ringtone_title">Ringtone</string>
    <string name="preference_clear_image_cache_title">Clear image cache</string>
    <string name="preference_clear_image_cache_description">Click here to clear cached images</string>
    <string name="preference_clear_thread_cache_title">Clear conversation cache</string>
    <string name="preference_clear_thread_cache_description">Click here to clear cached conversations</string>
    <string name="preference_location_services_title">Location Services</string>
    <string name="preference_sms_mms_group_title">SMS/MMS</string>
    <string name="preference_reset_nux_title">Show NUX again</string>
    <string name="debug_log_send">Send Debug</string>
    <string name="debug_log_title">Internal Preferences</string>
    <string name="debug_log_level">Logging Level</string>
    <string name="debug_log_enable">Enable Debug Logs</string>
    <string name="debug_log_description">Saves debug logs on the SD card so they can be uploaded when a bug is reported. May affect performance.</string>
    <string name="debug_force_crash">Crash</string>
    <string name="debug_php_profiling">PHP Request Profiling</string>
    <string name="debug_php_profiling_description">Enable php profiling on all API requests</string>
    <string name="debug_wirehog_profiling">Wirehog Request Profiling</string>
    <string name="debug_wirehog_profiling_description">Enable wirehog profiling on all API requests</string>
    <string name="debug_force_fb4a_look_and_feel">Force FB4A look and feel</string>
    <string name="debug_force_fb4a_look_and_feel_description">For debugging FB4A styling</string>
    <string name="debug_web_server_tier_title">Web Server Tier</string>
    <string name="debug_web_server_tier_description">The web tier to connect to</string>
    <string name="debug_web_sandbox_title">Web Sandbox</string>
    <string name="debug_web_sandbox_description">Set your web sandbox server</string>
    <string name="debug_web_sandbox_hint">(e.g. username.devNNNN.facebook.com)</string>
    <string name="debug_mqtt_server_tier_title">MQTT Server Tier</string>
    <string name="debug_mqtt_server_tier_description">The mqtt tier to connect to</string>
    <string name="debug_mqtt_sandbox_title">MQTT Sandbox</string>
    <string name="debug_mqtt_sandbox_description">Set your mqtt sandbox server</string>
    <string name="debug_mqtt_sandbox_hint">(e.g. username.devNNNN.snc6.facebook.com)</string>
    <string name="debug_rolodex_picker_title">Use Rolodex for Picker</string>
    <string name="debug_rolodex_picker_description">Use the Rolodex contacts back-end for the friend picker. May require restart.</string>
    <string name="debug_upload_contacts_title">Upload contacts to Rolodex</string>
    <string name="debug_upload_contacts_description">Upload device contacts to the server</string>
    <string name="debug_download_contacts_title">Download contacts from Rolodex</string>
    <string name="debug_download_contacts_description">Download server contacts to the device</string>
    <string name="debug_goto_contacts_list">View Contacts List</string>
</resources>