<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/orca_ic_menu_preferences" android:id="@id/preferences" android:title="@string/menu_preferences" />
    <item android:icon="@drawable/orca_ic_menu_refresh" android:id="@id/refresh" android:title="@string/menu_refresh" />
    <item android:icon="@*android:drawable/ic_menu_help" android:id="@id/help" android:title="@string/menu_help" />
    <item android:icon="@drawable/orca_ic_menu_bug" android:id="@id/send_log_menu_item" android:title="@string/debug_log_send" />
    <item android:icon="@*android:drawable/ic_menu_close_clear_cancel" android:id="@id/force_crash_menu_item" android:title="@string/debug_force_crash" />
    <item android:id="@id/goto_contacts_list_menu_item" android:title="@string/debug_goto_contacts_list" />
</menu>