<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="400.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/add_email_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="@string/add_person_dialog_name_hint" android:lines="1" android:inputType="textPersonName|textCapWords|textNoSuggestions" />
    <EditText android:id="@id/add_email_address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="@string/add_person_dialog_email_hint" android:lines="1" android:inputType="textNoSuggestions|textEmailAddress" />
    <EditText android:id="@id/add_phone_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="@string/add_person_dialog_phone_hint" android:lines="1" android:inputType="phone" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/add_email_add_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/add_person_dialog_add_button" android:layout_weight="1.0" />
        <Button android:id="@id/add_email_cancel_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/dialog_cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>