<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffe5e9ef" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/dummy_focus_elt" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="14.0sp" android:textColor="@*android:color/black" android:id="@id/email" android:background="@drawable/orca_login_inputfield_background" android:padding="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="25.0dip" android:hint="@string/login_screen_user_hint" android:lines="1" android:inputType="textNoSuggestions|textEmailAddress" />
            <EditText android:textSize="14.0sp" android:textColor="@*android:color/black" android:id="@id/password" android:background="@drawable/orca_login_inputfield_background" android:padding="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="25.0dip" android:hint="@string/login_screen_password_hint" android:lines="1" android:inputType="textPassword" android:imeOptions="actionGo" />
            <Button android:textSize="16.0sp" android:textStyle="bold" android:textColor="@*android:color/white" android:id="@id/login" android:background="@drawable/orca_tabbed_login_button_background" android:paddingLeft="25.0dip" android:paddingTop="9.0dip" android:paddingRight="25.0dip" android:paddingBottom="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="50.0dip" android:layout_marginBottom="15.0dip" android:text="@string/login_screen_login_button" />
        </LinearLayout>
    </ScrollView>
    <Button android:textSize="13.0sp" android:textStyle="bold" android:textColor="@*android:color/white" android:layout_gravity="center_horizontal" android:id="@id/signup" android:background="@drawable/orca_tabbed_login_button_background" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/login_screen_signup_button" />
</LinearLayout>