<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@drawable/orca_nux_popover" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/NuxIntroPadding"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="40.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/orca_nux_sms_drawable" android:scaleType="centerInside" android:adjustViewBounds="true" />
            <TextView android:id="@id/nux_sms_intro_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:text="@string/sms_nux_intro_title" style="@style/OrcaNuxTitle" />
            <TextView android:id="@id/nux_sms_intro_blurb" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" style="@style/OrcaNuxText" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip">
                <Button android:id="@id/nux_sms_intro_try_button" android:layout_width="0.0dip" android:layout_height="45.0sp" android:layout_marginRight="15.0dip" android:text="@string/sms_nux_try_button" android:layout_weight="1.0" style="@style/OrcaNuxButtonGreen" />
                <Button android:id="@id/nux_sms_intro_skip_button" android:layout_width="0.0dip" android:layout_height="45.0sp" android:text="@string/sms_nux_skip_button" android:layout_weight="1.0" style="@style/OrcaNuxButton" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>